--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   class="icon"
                 />
                 <h3>Education</h3>
-                <p>B.Tech @NITK, Surathkal<br />MSE @CMU, Pittsburgh</p>
+                <p>MSE'24 @CMU, Pittsburgh<br />B.Tech'22 @NITK, Surathkal</p>
               </div>
             </div>
             <div class="text-container">
